# SkillNet

./: README.md
examples/: analyze_example.py  evaluate_example.py  scientific_workflow_demo.ipynb  skillnet_usage_demo.ipynb
experiments/: README.md  alfworld_run.py  requirements.txt  scienceworld_run.py  webshop_run.py
experiments/src/: prompt_generator.py  skill.py  utils.py
experiments/src/alfworld/: alfworld_overall_procedure_examples.txt  alfworld_procedure_code_template.py
experiments/src/scienceworld/: scienceworld_overall_procedure_examples.txt  scienceworld_procedure_code_template.py
experiments/src/scienceworld/prompts/: system_prompt.py
experiments/src/webshop/: webshop_overall_procedure_examples.txt  webshop_procedure_code_template.py
experiments/src/webshop/prompts/: system_prompt.py
skillnet-ai/: .gitignore  README.md  pyproject.toml
skillnet-ai/examples/: create_example.py  evaluate_example.py  search_demo.py
skillnet-ai/src/skillnet_ai/: __init__.py  analyzer.py  cli.py  client.py  creator.py  downloader.py  evaluator.py  models.py  prompts.py  searcher.py
skills/skillnet/: SKILL.md
skills/skillnet/references/: api-reference.md  workflow-patterns.md
skills/skillnet/scripts/: create_skill.py  search_and_download.py  skillnet_create.py  skillnet_validate.py
