[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillnet-ai"
version = "0.0.2"
description = "Official Python SDK for SkillNet: Create, Evaluate, and Connect AI Skills."
readme = "README.md"
authors = [{ name = "SkillNet Team", email = "liangyuannnnn@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "openai>=1.0,<2.0",
    "pydantic>=2.0.0",
    "tqdm>=4.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "PyPDF2>=3.0.0",
    "pycryptodome>=3.20.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21"
]

[project.urls]
"Homepage" = "http://skillnet.openkg.cn"
"Source" = "https://github.com/zjunlp/SkillNet"

[project.scripts]
skillnet = "skillnet_ai.cli:app"